...
                                                <rect key="frame" x="18" y="97" width="337" height="100"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s3o-Mj-IZH" userLabel="Email">
                                                        <rect key="frame" x="0.0" y="0.0" width="337" height="40"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="emailSignin">
                                                            <accessibilityTraits key="traits" none="YES"/>
                                                            <bool key="isElement" value="YES"/>
...
                                                        <textInputTraits key="textInputTraits" textContentType="email"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MO4-S5-sr2">
                                                        <rect key="frame" x="0.0" y="60" width="337" height="40"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Password">
...
                                                <rect key="frame" x="18" y="208" width="124" height="33"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <state key="normal" title="Şifremi Unuttum">
                                                    <color key="titleColor" red="0.18289321659999999" green="0.41205567119999997" blue="0.58041328189999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                </state>
...
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ParkersIcon" translatesAutoresizingMaskIntoConstraints="NO" id="K6y-Ft-jII">
                                                <rect key="frame" x="0.0" y="5" width="373" height="70"/>
                                                <accessibility key="accessibilityConfiguration" identifier="ikon"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="70" id="rQq-8C-2lj"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                                <state key="normal" title="Giriş">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cbv-yX-eX1">
                                                <rect key="frame" x="306" y="210" width="51" height="31"/>
                                                <accessibility key="accessibilityConfiguration" identifier="benihatırla"/>
                                                <connections>
                                                    <action selector="rememberMeSwitchChanged:" destination="rN4-t7-Elb" eventType="valueChanged" id="IkD-Cc-0Eh"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xax-P6-2UM">
                                        <rect key="frame" x="323" y="384.5" width="30" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="hideButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="xax-P6-2UM" secondAttribute="height" multiplier="1:1" id="HGm-Sm-pEK"/>
...
                                                <rect key="frame" x="18" y="307" width="337" height="41"/>
                                                <color key="backgroundColor" red="0.055864840749999999" green="0.41565477849999999" blue="0.59610098600000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <accessibility key="accessibilityConfiguration" identifier="sendButton"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="Button"/>
...
