...
                    <view key="view" contentMode="scaleToFill" id="N5O-B3-aUz">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FL1-gg-7v8">
                                <rect key="frame" x="146" y="831" width="122.5" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="Oturumu Kapat"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Oturumu Kapat" cornerStyle="medium"/>
                                <connections>
                                    <action selector="signoutButton:" destination="G07-rM-Xxr" eventType="touchUpInside" id="8c1-oY-9jA"/>
                                </connections>
                            </button>
...
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Text Field" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tzm-h9-Akw">
                                                <rect key="frame" x="151.5" y="0.0" width="186.5" height="31"/>
                                                <color key="backgroundColor" red="0.18350580329999999" green="0.41160207989999997" blue="0.58041334150000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Eposta"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                                <textInputTraits key="textInputTraits" textContentType="email"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VPY-OJ-rTb">
                                                <rect key="frame" x="338" y="0.0" width="40" height="31"/>
...
                                            </button>
                                        </subviews>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleAspectFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="DOx-cF-6V6">
                                        <rect key="frame" x="0.0" y="41" width="378" height="31"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plaka:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ib-39-fDN">
                                                <rect key="frame" x="0.0" y="0.0" width="122" height="31"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Text Field" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gSr-Qg-eeq">
...
